# AnimalProcessingToolbox

./: CMakeLists.txt  ImageTransformation.cpp  TransformationMatrix.cpp  main.cpp
include/: ImageDataClass.h  ImageTransformation.h  TransformationMatrix.h
